# mcp-armor

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  PROJECT_CONTEXT.md  README.md  cosai.yaml.example  docker-compose.sidecar.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/: chain_overhead.py  sidecar_overhead.py
docs/: ARCHITECTURE.md  AUDIT_2026-06-12.md  AUDIT_2026-07-17.md  CONTRIBUTING.md  COSAI_MCP_REMEDIATION.md  COVERAGE.md  DESIGN.md  GETTING_STARTED.md  SECURITY.md  THREAT_MAPPING.md  TYPESCRIPT.md  VISION.md  workplan.md
examples/cosai_yaml_full/: cosai.yaml
examples/custom_engine/: server.py
examples/fastapi_basic/: server.py
examples/fastmcp_basic/: server.py
examples/quickstart/: README.md  cosai.yaml
mcp_armor/: __init__.py  config.py  context.py  exceptions.py  guard.py  sidecar.py  types.py
mcp_armor/adapters/: __init__.py  dispatcher.py  fastapi.py  fastmcp.py
mcp_armor/engines/: __init__.py  _session_token.py  audit.py  auth.py  authz.py  base.py  boundary.py  integrity.py  network.py  protection.py  resources.py  session.py  supply_chain.py  trust.py  validation.py
tests/: conftest.py  test_benchmark.py  test_config.py  test_guard.py  test_remediation_audit_2026_06_12.py
tests/adapters/: test_fastapi.py  test_fastmcp.py  test_sidecar.py
tests/adversarial/: test_integration.py
tests/engines/: test_audit.py  test_auth.py  test_authz.py  test_boundary.py  test_guard_decorator.py  test_integrity.py  test_network.py  test_protection.py  test_resources.py  test_session.py  test_session_token.py  test_supply_chain.py  test_trust.py  test_validation.py  test_validation_prose_field_exemption.py
tests/security/: test_regression_audit.py  test_regression_dpop.py  test_regression_egress.py  test_regression_low.py  test_regression_panel_fixes.py  test_regression_sidecar.py  test_regression_validation_network.py
