[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-armor"
version = "0.1.0"
description = "Server-side protection middleware for MCP servers — all 12 CoSAI threat categories"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
keywords = ["mcp", "security", "cosai", "middleware", "llm", "ai-security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "google-re2>=1.1",
    "joserfc>=0.12",
    "keyring>=24.0",
    "pyyaml>=6.0",
    "jsonschema>=4.20",
    "cryptography>=41.0",
]

[project.optional-dependencies]
fastmcp = ["fastmcp>=0.1"]
fastapi = ["fastapi>=0.110", "starlette>=0.36"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "mypy>=1.9",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/cosai-oasis/mcp-armor"
Documentation = "https://github.com/cosai-oasis/mcp-armor/blob/main/docs/SERVER_SDK_DESIGN.md"
Issues = "https://github.com/cosai-oasis/mcp-armor/issues"

[tool.hatch.build.targets.wheel]
packages = ["mcp_armor"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "S", "B"]
ignore = ["S101"]  # allow assert in tests

[tool.mypy]
python_version = "3.11"
strict = true
