[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-armor"
version = "1.1.0"
description = "Server-side protection middleware for MCP servers — all 12 CoSAI threat categories"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
keywords = ["mcp", "security", "cosai", "middleware", "llm", "ai-security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# C1: floor + upper bound on every runtime dependency. The upper bound caps the
# next MAJOR so a breaking release of a security-relevant dep (joserfc,
# cryptography) cannot be silently pulled in. For reproducible installs generate
# a hash-pinned lockfile — see requirements.lock and docs/GETTING_STARTED.md.
dependencies = [
    "google-re2>=1.1,<2",
    "joserfc>=1.6.8,<2",  # F8: floor at a release with hardened alg-confusion / alg:none defaults + empty-key HMAC reject (PYSEC-2026-2528) + RFC7797 payload-size fix (PYSEC-2026-2530)
    "keyring>=24.0,<26",
    "pyyaml>=6.0,<7",
    "jsonschema>=4.20,<5",
    "cryptography>=41.0,<46",
]

[project.optional-dependencies]
fastmcp = ["fastmcp>=0.1"]
fastapi = ["fastapi>=0.110", "starlette>=0.36"]
# B8: the reverse-proxy sidecar (`python -m mcp_armor.sidecar`). httpx makes the
# upstream hop; uvicorn serves the ASGI app. C1: floor + next-major cap on each.
sidecar = ["httpx>=0.27,<1", "uvicorn>=0.29,<1"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-benchmark>=4.0",  # B5: p50/p99 chain-overhead harness
    "httpx>=0.27",
    "uvicorn>=0.29",  # B8: sidecar serve path + loopback-hop benchmark
    "mypy>=1.9",
    "ruff>=0.4",
]

[project.scripts]
mcp-armor-sidecar = "mcp_armor.sidecar:main"

[project.urls]
Homepage = "https://github.com/ragsvasan/mcp-armor"
Documentation = "https://github.com/ragsvasan/mcp-armor/blob/main/docs/GETTING_STARTED.md"
Issues = "https://github.com/ragsvasan/mcp-armor/issues"

[tool.hatch.build.targets.wheel]
packages = ["mcp_armor"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "--tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "S", "B"]
ignore = ["S101"]  # allow assert in tests

[tool.mypy]
python_version = "3.11"
strict = true
